-------------------------------------------------
Gearswap 0.704 - Changed require() to include() and reworked its back end. Confirmed that register_event() works for users now and are successfully deleted.
-------------------------------------------------
Gearswap 0.703 - Added an export command and the appropriate documentation.
-------------------------------------------------
Gearswap 0.702 - Made keys to player data tables all case insensitive. Fixed the user windower structure. Set it so it should reset midaction if the spelltarget dies while casting.
-------------------------------------------------
Gearswap 0.701 - Made silent interrupts reset midaction. Fixed aftercast triggering on event_action_messages other than your own/your pets.
-------------------------------------------------
Gearswap 0.700 - Added preliminary augmented equipment support. Improved register_event. Finished conversion of GearSwap to new API.
-------------------------------------------------
Gearswap 0.605 - Fixed pet_mid/aftercast. Added/documented disable/enable. Verified that register_event will work in user documents.
-------------------------------------------------
Gearswap 0.604 - Added more handling to deal with monstrosity. Dramatical reduced memory requirements.
-------------------------------------------------
Gearswap 0.603 - Added handling to deal with monstrosity. About a week worth of misc. changes that I can't remember.
-------------------------------------------------
Gearswap 0.602 - Minor refactoring, moved things around, added a little more protection to send_command()
-------------------------------------------------
Gearswap 0.601 - Improved the equip command to handle multiple set layers
-------------------------------------------------
Gearswap 0.600 - Added item handling and add/documented require
-------------------------------------------------
Gearswap 0.505 - Added and documented set_combine()
-------------------------------------------------