@@ -1,7 +1,6 @@
-require 'data/thf_sets'
-
 function get_sets()
 	TP_Index = 1
+	Idle_Index = 1
 	sets = {}
 	sets.JA_Conspirator = {body="Raider's Vest +2"}
 	sets.JA_Accomplice = {head="Raider's Bonnet +2"}
@@ -15,43 +14,56 @@ function get_sets()
 	sets.JA_Waltz = {head="Anwig Salade",neck="Dualism Collar",ring1="Valseur's Ring",ring2="Veela Ring",
 		waist="Aristo Belt",legs="Desultor Tassets",feet="Dance Shoes"}
 
-	sets.WS_Evisceration = {head="Whirlpool Mask",neck="Justiciar's Torque",ear1="Moonshade Earring",ear2="Brutal Earring",
-		body="Manibozho Jerkin",hands="Raider's Armlets +2",ring1="Rajas Ring",ring2="Thundersoul Ring",
-		back="Rancorous Mantle",waist="Soil Belt",legs="Manibozho Brais",feet="Manibozho Boots"}
+	sets.WS_Evisceration = {head="Uk'uxkaj Cap",neck="Nefarious Collar",ear1="Moonshade Earring",ear2="Brutal Earring",
+		body="Manibozho Jerkin",hands="Buremte Gloves",ring1="Rajas Ring",ring2="Thundersoul Ring",
+		back="Rancorous Mantle",waist="Wanion Belt",legs="Manibozho Brais",feet="Manibozho Boots"}
 
-	sets.WS_Exenterator = {head="Whirlpool Mask",neck="Houyi's Gorget",ear1="Steelflash Earring",ear2="Bladeborn Earring",
+	sets.WS_Exenterator = {head="Uk'uxkaj Cap",neck="Houyi's Gorget",ear1="Steelflash Earring",ear2="Bladeborn Earring",
 		body="Manibozho Jerkin",hands="Skadi's Bazubands +1",ring1="Stormsoul Ring",ring2="Epona's Ring",
-		back="Atheling Mantle",waist="Windbuffet Belt",legs="Nahtirah Trousers",feet="Thaumas Nails"}
+		back="Atheling Mantle",waist="Windbuffet Belt",legs="Nahtirah Trousers",feet="Manibozho Boots"}
 
-	sets.WS_TA_Exenterator = {head="Whirlpool Mask",neck="Houyi's Gorget",ear1="Steelflash Earring",ear2="Bladeborn Earring",
+	sets.WS_TA_Exenterator = {head="Uk'uxkaj Cap",neck="Houyi's Gorget",ear1="Steelflash Earring",ear2="Bladeborn Earring",
 		body="Manibozho Jerkin",hands="Rogue's Armlets +1",ring1="Stormsoul Ring",ring2="Epona's Ring",
-		back="Atheling Mantle",waist="Windbuffet Belt",legs="Nahtirah Trousers",feet="Thaumas Nails"}
+		back="Atheling Mantle",waist="Windbuffet Belt",legs="Nahtirah Trousers",feet="Manibozho Boots"}
 		
 	sets.WS_SA_TA_Exenterator = sets.WS_TA_Exenterator
 	
-	TP_Set_Names = {"Low Man","Delay Cap","Evasion"}
+	TP_Set_Names = {"Low Man","Delay Cap","Evasion","TH"}
 	sets.TP = {}
-	sets.TP['Low Man'] = {ranged="Raider's Boomerang",head="Whirlpool Mask",neck="Asperity Necklace",
-		ear1="Suppanomimi",ear2="Brutal Earring",body="Thaumas Coat",hands="Miodio Gloves",
-		ring1="Rajas Ring",ring2="Epona's Ring",back="Rancorous Mantle",waist="Patentia Belt",
+	sets.TP['Low Man'] = {ranged="Raider's Boomerang",head="Uk'uxkaj Cap",neck="Nefarious Collar",
+		ear1="Suppanomimi",ear2="Brutal Earring",body="Thaumas Coat",hands="Skadi's Bazubands +1",
+		ring1="Rajas Ring",ring2="Epona's Ring",back="Atheling Mantle",waist="Patentia Sash",
 		legs="Manibozho Brais",feet="Manibozho Boots"}
 		
-	sets.TP['Delay Cap'] = {ammo="Potestas Bomblet",head="Whirlpool Mask",neck="Asperity Necklace",
-		ear1="Steelflash Earring",ear2="Bladeborn Earring",body="Thaumas Coat",hands="Miodio Gloves",
+	sets.TP['TH'] = {ranged="Raider's Boomerang",head="Uk'uxkaj Cap",neck="Asperity Necklace",
+		ear1="Suppanomimi",ear2="Brutal Earring",body="Thaumas Coat",hands="Assassin's Armlets +2",
+		ring1="Rajas Ring",ring2="Epona's Ring",back="Rancorous Mantle",waist="Patentia Sash",
+		legs="Manibozho Brais",feet="Raider's Poulaines +2"}
+		
+	sets.TP['Delay Cap'] = {ammo="Potestas Bomblet",head="Uk'uxkaj Cap",neck="Asperity Necklace",
+		ear1="Steelflash Earring",ear2="Bladeborn Earring",body="Thaumas Coat",hands="Skadi's Bazubands +1",
 		ring1="Rajas Ring",ring2="Epona's Ring",back="Rancorous Mantle",waist="Windbuffet Belt",
 		legs="Manibozho Brais",feet="Manibozho Boots"}
 		
-	sets.TP.Evasion = {ranged="Aliyat Chakram",head="Manibozho Beret",neck="Torero Torque",
-		ear1="Novia Earring",ear2="Musical Earring",body="Skadi's Cuirie +1",hands="Slither Gloves",
+	sets.TP.Evasion = {ranged="Aliyat Chakram",head="Uk'uxkaj Cap",neck="Torero Torque",
+		ear1="Novia Earring",ear2="Musical Earring",body="Skadi's Cuirie +1",hands="Buremte Gloves",
 		ring1="Beeline Ring",ring2="Epona's Ring",back="Boxer's Mantle",waist="Scouter's Rope",
-		legs="Manibozho Brais",feet="Raider's Poulaines +2"}
-		
-	sets.aftercast_Idle = {head="Oce. Headpiece +1",neck="Wiglen Gorget",ear1="Merman's Earring",ear2="Bladeborn Earring",
-		body="Kheper Jacket",hands="Melaco Mittens",ring1="Paguroidea Ring",ring2="Sheltered Ring",
-		back="Boxer's Mantle",waist="Black Belt",legs="Manibozho Brais",feet="Skadi's Jambeaux +1"}
+		legs="Manibozho Brais",feet="Manibozho Boots"}
+	
+	Idle_Set_Names = {'Normal','MDT'}
+	sets.Idle = {}
+	sets.Idle.Normal = {head="Oce. Headpiece +1",neck="Wiglen Gorget",ear1="Merman's Earring",ear2="Bladeborn Earring",
+		body="Kheper Jacket",hands="Buremte Gloves",ring1="Paguroidea Ring",ring2="Sheltered Ring",
+		back="Atheling Mantle",waist="Scouter's Rope",legs="Manibozho Brais",feet="Skadi's Jambeaux +1"}
+				
+	sets.Idle.MDT = {head="Uk'uxkaj Cap",neck="Twilight Torque",ear1="Merman's Earring",ear2="Bladeborn Earring",
+		body="Avalon Breastplate",hands="Buremte Gloves",ring1="Dark Ring",ring2="Dark Ring",
+		back="Mollusca Mantle",waist="Wanion Belt",legs="Nahtirah Trousers",feet="Skadi's Jambeaux +1"}
+	
 end
 
 function precast(spell,action)
+	verify_equip()
 	if sets['precast_'..spell.english] then
 		equip(sets['JA_'..spell.english])
 	elseif spell.type=="WeaponSkill" then
@@ -72,25 +84,25 @@ function midcast(spell,action)
 end
 
 function aftercast(spell,action)
-	if player.in_combat then
+	if player.status=='Engaged' then
 		equip(sets.TP[TP_Set_Names[TP_Index]])
 	else
-		equip(sets.aftercast_Idle)
+		equip(sets.Idle[Idle_Set_Names[Idle_Index]])
 	end
 end
 
 function status_change(new,old)
 	if T{'Idle','Resting'}:contains(new) then
-		equip(sets['aftercast_Idle'])
+		equip(sets.Idle[Idle_Set_Names[Idle_Index]])
 	elseif new == 'Engaged' then
-		equip(sets['aftercast_TP'])
+		equip(sets.TP[TP_Set_Names[TP_Index]])
 	end
 end
 
-function buff_change(status,gain_or_loss)
-	if status=="Sneak Attack" then
+function buff_change(buff,gain_or_loss)
+	if buff=="Sneak Attack" then
 		soloSA = (gain_or_loss == "gain")
-	elseif status=="Trick Attack" then
+	elseif buff=="Trick Attack" then
 		soloTA = (gain_or_loss == "gain")
 	end
 end
@@ -98,7 +110,13 @@ end
 function self_command(command)
 	if command == 'toggle TP set' then
 		TP_Index = TP_Index +1
-		if TP_Index == 4 then TP_Index = 1 end
+		if TP_Index > #TP_Set_Names then TP_Index = 1 end
 		send_command('@input /echo ----- TP Set changed to '..TP_Set_Names[TP_Index]..' -----')
+		equip(sets.TP[TP_Set_Names[TP_Index]])
+	elseif command == 'toggle Idle set' then
+		Idle_Index = Idle_Index +1
+		if Idle_Index > #Idle_Set_Names then Idle_Index = 1 end
+		send_command('@input /echo ----- Idle Set changed to '..Idle_Set_Names[Idle_Index]..' -----')
+		equip(sets.Idle[Idle_Set_Names[Idle_Index]])
 	end
 end
