@@ -4,7 +4,3 @@ Issues:
 * Need a Spellcast -> Lua converter before release.
 * Need to decide what the heck I'm doing with the second argument to user functions.
 * Change mob_array.type so that it matches validtarget.
-
-Elpy section:
-* cancel_spell in GearSwap no longer works with Shortcuts loaded. ( http://www.bluegartr.com/threads/115131-Windower-4-Open-Beta?p=5850951&viewfull=1#post5850951 )
-* Various other stuff around there
